--- a/src/Controls/samples/Controls.Sample.UITests/Issues/Issues15815.xaml
+++ b/src/Controls/samples/Controls.Sample.UITests/Issues/Issues15815.xaml
@@ -4,13 +4,13 @@
              x:Class="Maui.Controls.Sample.Issues.Issues15815"
              Title="Issues15815">
     <Grid RowDefinitions="Auto,Auto, Auto" >
-        <Label Grid.Row="0" Text="The last cell (index 3) is not visible with MeasureAllItems if 1st cell is 50px width" />
+        <Label Grid.Row="0" Text="The last cell (index 2) is not visible with MeasureAllItems if 1st cell is 50px width" />
         <CollectionView x:Name="col" BackgroundColor="LightBlue" Grid.Row="1" ItemsLayout="HorizontalList"
                         ItemSizingStrategy="MeasureAllItems" HeightRequest="200">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <Grid BackgroundColor="{Binding Color}" WidthRequest="{Binding Width}" HeightRequest="200">
-                        <Label Text="{Binding Index}" FontSize="Header" TextColor="Black"/>
+                        <Label Text="{Binding Name}" FontSize="Header" TextColor="Black"/>
                     </Grid>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
