--- a/src/Controls/samples/Controls.Sample.UITests/Issues/Issues15815.xaml
+++ b/src/Controls/samples/Controls.Sample.UITests/Issues/Issues15815.xaml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Maui.Controls.Sample.Issues.Issues15815"
@@ -10,7 +10,7 @@
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <Grid BackgroundColor="{Binding Color}" WidthRequest="{Binding Width}" HeightRequest="200">
-                        <Label Text="{Binding Name}" FontSize="Header" TextColor="Black"/>
+                        <Label AutomationId="{Binding Id}" Text="{Binding Name}" FontSize="Header" TextColor="Black"/>
                     </Grid>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
